# friperms

./: Cargo.toml  LICENSE-APACHE  README.md
derive/: Cargo.toml
derive/src/: comparisons.rs  lib.rs  operations.rs
examples/: clans.rs
examples/simple_permission_system/: Cargo.toml
examples/simple_permission_system/src/: lib.rs
friperms/: Cargo.toml
friperms/examples/: clans.rs
friperms/src/: comparisons.rs  hashmap.rs  lib.rs  list.rs  list_with_wildcard.rs  operations.rs  separator.rs  set.rs  trivial.rs  wildcard_hashmap.rs
friperms/src/impls/: array.rs  bool.rs  box.rs  btreemap.rs  hashmap.rs  mod.rs  option.rs
friperms/src/wildcards/: btreemap.rs  hashmap.rs  mod.rs
friperms/tests/: derive_tests.rs  list_and_list_with_wildcard.rs
friperms_derive/: Cargo.toml
friperms_derive/src/: lib.rs
src/: comparisons.rs  lib.rs  operations.rs
src/collections/: mod.rs  wildcard_btreemap.rs  wildcard_hashmap.rs
src/impls/: array.rs  bool.rs  box.rs  btreemap.rs  hashmap.rs  map.rs  mod.rs  option.rs  tuples.rs
src/wildcards/: btreemap.rs  hashmap.rs
tests/: Cargo.toml  derive_tests.rs
tests/tests/: derive_tests.rs  list_and_list_with_wildcard.rs
