[package]
name = "friperms"
version = "0.2.1"
edition = "2024"
description = "FriPerms is a framework for creating typed permission models for whatever system you could phatom."
repository = "https://github.com/DreamplaySE/friperms"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["derive"]

[[example]]
name = "clans"
required-features = ["derive"]

[[test]]
name = "derive_tests"
required-features = ["derive"]

[dependencies]
friperms_derive = { path = "./derive", version = "^0.1.0", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
friperms_derive = { path = "./derive", version = "^0.1.0" }
maplit = { version = "1.0.2" }
rstest = { version = "0.17.0", default-features = false }

[features]
default = ["std"]
derive = ["friperms_derive"]
serde = ["dep:serde"]
std = ["serde?/std"]
