[package]
name = "finit"
version = "0.3.0"
edition = "2024"
description = "Finit is a library for defining sets of data, and then performing set operations on them. It is designed to be used for permission systems, but can be used for any kind of data that can be represented as a set."
repository = "https://github.com/DreamplaySE/finit"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[workspace]
resolver = "2"
members = ["derive"]

[[example]]
name = "clans"
required-features = ["derive"]

[[test]]
name = "derive_tests"
required-features = ["derive"]

[dependencies]
finit-derive = { path = "./derive", version = "^0.2.0", optional = true }
phf = { version = "0.13.0", optional = true }
phf_shared = { version = "0.13.0", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
finit-derive = { path = "./derive", version = "^0.2.0" }
maplit = { version = "1.0.2" }
rstest = { version = "0.17.0", default-features = false }

[features]
default = ["std"]
derive = ["finit-derive"]
phf = ["dep:phf", "dep:phf_shared"]
serde = ["dep:serde"]
std = ["serde?/std"]
