[package]
name = "finit-derive"
version = "0.1.0"
edition = "2024"
description = "Finit is a framework for creating typed permission models for whatever system you could phatom."
repository = "https://github.com/DreamplaySE/finit"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0.34"
quote = "^1.0.10"
syn = { version = "^1.0.69", features = ["fold", "full", "printing"] }
